[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Sprites/Magic/incantation_bg.png" type="Texture" id=1]
[ext_resource path="res://Battle/MagicIncantation/MagicIncantation.gd" type="Script" id=2]
[ext_resource path="res://Resources/Sprites/Magic/incantation_down.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/Magic/incantation_right.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/Magic/incantation_up.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Magic/incantation_left.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/Magic/incantation_idk.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/Magic/magic_wand.png" type="Texture" id=8]

[node name="MagicIncantation" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
right_texture = ExtResource( 4 )
left_texture = ExtResource( 6 )
up_texture = ExtResource( 5 )
down_texture = ExtResource( 3 )
idk_texture = ExtResource( 7 )

[node name="Incantations" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 456.0
margin_top = 80.0
margin_right = 416.0
margin_bottom = 40.0
rect_scale = Vector2( 0.75, 0.75 )

[node name="BG1" type="TextureRect" parent="Incantations"]
margin_right = 400.0
margin_bottom = 400.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Item1" type="TextureRect" parent="Incantations"]
margin_left = -50.0
margin_top = -50.0
margin_right = 350.0
margin_bottom = 350.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 200, 200 )

[node name="BG2" type="TextureRect" parent="Incantations"]
margin_left = 350.0
margin_right = 750.0
margin_bottom = 400.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Item2" type="TextureRect" parent="Incantations"]
margin_left = 300.0
margin_top = -50.0
margin_right = 700.0
margin_bottom = 350.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 200, 200 )

[node name="BG3" type="TextureRect" parent="Incantations"]
margin_left = 700.0
margin_right = 1100.0
margin_bottom = 400.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Item3" type="TextureRect" parent="Incantations"]
margin_left = 650.0
margin_top = -50.0
margin_right = 1050.0
margin_bottom = 350.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 200, 200 )

[node name="BG4" type="TextureRect" parent="Incantations"]
margin_left = 1050.0
margin_right = 1450.0
margin_bottom = 400.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Item4" type="TextureRect" parent="Incantations"]
margin_left = 1000.0
margin_top = -50.0
margin_right = 1400.0
margin_bottom = 350.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 200, 200 )

[node name="IncantationTimer" type="Timer" parent="."]
autostart = true

[node name="Wand" type="Control" parent="."]
margin_left = 560.0
margin_top = 568.0
margin_right = 584.0
margin_bottom = 596.0

[node name="Wand" type="TextureRect" parent="Wand"]
margin_right = 800.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 400, 10 )
texture = ExtResource( 8 )
stretch_mode = 3

[connection signal="timeout" from="IncantationTimer" to="." method="_on_IncantationTimer_timeout"]
